fixed a few NPEs added disabling OK button on entering empty/invalid URLs or unreadable files